# verchat-

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/export/: compress.rs  continue_dev.rs  lm_studio.rs  mod.rs  opencode.rs
src/model/: conversation.rs  message.rs  mod.rs  source.rs
src/parser/: aider.rs  claude_code.rs  continue_dev.rs  cursor.rs  gemini_cli.rs  lm_studio.rs  mod.rs  opencode.rs  windsurf.rs
src/store/: mod.rs  sqlite.rs
src/tui/: app.rs  mod.rs  theme.rs  watcher.rs
src/tui/screens/: conversation.rs  dashboard.rs  mod.rs  search.rs  stats.rs
tests/: export_tests.rs  parser_tests.rs
