[package]
name = "verchat"
version = "0.1.0"
edition = "2024"
description = "Le Git des conversations IA"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
catppuccin = { version = "2.7", features = ["ratatui"] }
arboard = "3"
toml = "0.8"
notify = "7"
dirs = "6"

[dev-dependencies]
tempfile = "3"
